--- a/_publications/V5-2018.md
+++ b/_publications/V5-2018.md
@@ -4,6 +4,6 @@ instantons on the Fano 3-fold V5"
 collection: publications
 permalink: /publication/V5-2018
 date: 2020-08-03
-venue: 'Journal of Pure and Appleid Algebra'
+venue: 'Journal of Pure and Applied Algebra'
 paperurl: 'https://arxiv.org/abs/1810.04737'
 ---
