--- a/_publications/V4-2018.md
+++ b/_publications/V4-2018.md
@@ -4,6 +4,7 @@ collection: publications
 permalink: /publication/V4-2018
 date: 2018-10-10
 venue: 'arxiv preprint'
+excerpt: 'to appear in European Journal of Mathematics'
 paperurl: 'http://qinxuqiang.github.io/files/Moduli_space_of_instanton_sheaves_on_V4-5.pdf'
 ---
 
