--- a/_publications/V4-2018.md
+++ b/_publications/V4-2018.md
@@ -1,11 +1,11 @@
 ---
-title: "Moduli space of instanton sheaves on the Fano 3-fold V4"
+title: "Compactification of the moduli space of minimal instantons on the Fano threefold V4"
 collection: publications
 permalink: /publication/V4-2018
 date: 2018-10-10
-venue: 'arxiv preprint'
+venue: 'European Journal of Mathematics'
 excerpt: 'to appear in European Journal of Mathematics'
-paperurl: 'http://qinxuqiang.github.io/files/Moduli_space_of_instanton_sheaves_on_V4-5.pdf'
+paperurl: 'https://arxiv.org/abs/1810.04739'
 ---
 
 
