--- a/_publications/V4-2018.md
+++ b/_publications/V4-2018.md
@@ -4,7 +4,7 @@ collection: publications
 permalink: /publication/V4-2018
 date: 2021-07-19
 venue: 'European Journal of Mathematics'
-paperurl: 'https://arxiv.org/abs/1810.04739'
+paperurl: 'https://rdcu.be/cpdLR'
 ---
 
 
