--- a/_teaching/233HSp22.md
+++ b/_teaching/233HSp22.md
@@ -1,5 +1,5 @@
 ---
-title: "MATH 233H Calculus of Functions of Several Variables, Honors section "
+title: "MATH 233H Calculus of Functions of Several Variables "
 collection: teaching
 type: "Undergraduate Honors course"
 permalink: /teaching/2021-fall-UNC
