--- a/_teaching/233HSp22.md
+++ b/_teaching/233HSp22.md
@@ -11,3 +11,5 @@ location: "Chapel Hill, NC"
 Instructor of Record for Spring 2022. 
 
 Textbook: Calculus: Early Transcendentals, by Daniel K. Clegg, James Stewart, and Saleem Watson.
+
+[View Eval here](http://qinxuqiang.github.io/files/MATH_381_005_Syllabus.pdf)
