--- a/_teaching/233HSp22.md
+++ b/_teaching/233HSp22.md
@@ -12,4 +12,4 @@ Instructor of Record for Spring 2022.
 
 Textbook: Calculus: Early Transcendentals, by Daniel K. Clegg, James Stewart, and Saleem Watson.
 
-[View Eval here] (http://qinxuqiang.github.io/files/233H_Eval.pdf)
+[Course Evaluation] (http://qinxuqiang.github.io/files/233H_Eval.pdf)
